public class MainSession {

    // holds the currently logged-in user's ID
    public static int userId = -1;

    // optional (useful for admin or display)
    public static String username = null;
}